--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <body>
     <!-- header section -->
-    <header>
+    <header class="h-100">
 
         <!-- navigation menu -->
-        <nav>
-            <div class="container h-100">
+        <nav class="h-100">
+            <div class="h-100 container text-white">
 
                 <div class="row align-items-center h-100">
 
@@ -42,7 +42,7 @@
         <!-- jumbotron -->
         <div class="jumbotron">
 
-            <div class="container text-center">
+            <div class="container text-center text-white    ">
                 <h2 class="text-uppercase">START BOOTSTRAP</h2>
                 <img class="avatar" src="img/avatar.svg" alt="">
             </div>
@@ -103,7 +103,7 @@
         <!-- /portfolio section -->
 
         <!-- about section -->
-        <section class="about">
+        <section class="about text-white">
             <div class="ms_container">
                 <div class="container-fluid text-center pt-4">
                     <h3 class="text-uppercase">ABOUT</h3>
@@ -127,6 +127,44 @@
         
         </section>
         <!-- /about section -->
+
+        <!-- contact me section -->
+        <section class="contactme">
+            <div class="ms_container py-3">
+                <div class="container">
+                    <h2 class="text-center text-uppercase">
+                        CONTACT ME
+                    </h2>
+
+                    <div>
+                        Name
+                        <hr>
+                    </div>  
+
+                    <div>
+                        Email Address
+                        <hr>
+                    </div>  
+
+                    <div>
+                        Phone number
+                        <hr>
+                    </div>  
+
+                    <div class="pb-10">
+                       Message
+                    </div>  
+
+                   <hr>
+
+                   <button>Send</button>
+                    
+                </div>
+
+            </div>
+
+        </section>
+        <!-- /contact me section -->
 
 
 
