sistemata punteggiatura in footer bottom

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
                     <div class="col-12 col-md-4">
                         <h5>ABOUT FREELANCER</h5>
-                        <p>Freelance is a free of use, open source Bootstrap Theme created by <a class="start-boot" href="">Start Bootstrap</a><div class=""></div></p>
+                        <p>Freelance is a free of use, open source Bootstrap Theme created by <a class="start-boot" href="">Start Bootstrap</a>.<div class=""></div></p>
                     </div>
 
                 </div>
